# system-design-interview-coach

./: .gitignore  README.md
backend/: README.md  conftest.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: agent_loader.py  planner_agent.py  scorer_agent.py  specifier_agent.py  task_generator_agent.py
backend/app/agents/planner/: instructions.md
backend/app/agents/specifier/: instructions.md
backend/app/api/: sessions.py
backend/app/domain/: models.py  store.py
backend/app/skills/: assumptions_skill.py  plan_skill.py  scoring_skill.py  task_skill.py
backend/app/workflow/: bootstrap.py  runner.py
backend/tests/: test_scoring_skill.py  test_sessions_api.py  test_task_skill.py  test_workflow.py
ui/: package-lock.json
ui/app/: layout.tsx  page.tsx
ui/app/sessions/: page.tsx
ui/app/sessions/[id]/: page.tsx
